--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="layer">
                         <h2>Portfolio Website</h2>
                         <p>Responsive portfolio website featuring HTML, CSS, and JavaScript for a dynamic and engaging user experience, showcasing skills and projects</p>
-                        <a href="https://github.com/sumitmy/sumit_portfolio"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://sumitmy.github.io/sumit_portfolio/"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="work">
