--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
             <div class="header-text">
                 <p>Software Developer</p>
-                <h1>Hi, I'm <span>Sumit </span><br>Kumar from India</h1>
+                <h1>Hi, I'm <span>Sumit </span><br>Kumar</h1>
 
             </div>
         </div>
